--- a/app/src/main/res/layout/fragment_notification_dailog.xml
+++ b/app/src/main/res/layout/fragment_notification_dailog.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.example.yourpc.bb_registration.NotificationDialogFragment">
+             tools:context="com.example.yourpc.bb_registration.dialogs.NotificationDialogFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
